--- a/doc/03. Installation and configuration guide/02. setup-guide-powerdns-setup.md
+++ b/doc/03. Installation and configuration guide/02. setup-guide-powerdns-setup.md
@@ -4,7 +4,7 @@
 
 #####  [Order now](https://puqcloud.com/index.php?rp=/store/whmcs-module-powerdns) | [Download](https://download.puqcloud.com/WHMCS/servers/PUQ_WHMCS-PowerDNS/) | [FAQ](https://faq.puqcloud.com/)
 
-<p class="callout info">**Disclaimer:** This guide is intended for informational purposes only and provides a basic example of how to enable the API in PowerDNS. It is strongly recommended to refer to the official PowerDNS documentation for comprehensive and accurate instructions. Following official guidelines ensures that your setup is secure, reliable, and fully supported. This example may not cover all security considerations or configurations required for your specific environment. Use this guide at your own risk.</p>
+>**Disclaimer:** This guide is intended for informational purposes only and provides a basic example of how to enable the API in PowerDNS. It is strongly recommended to refer to the official PowerDNS documentation for comprehensive and accurate instructions. Following official guidelines ensures that your setup is secure, reliable, and fully supported. This example may not cover all security considerations or configurations required for your specific environment. Use this guide at your own risk.
 
 ## Install PowerDNS
 
@@ -263,15 +263,20 @@ $ dig @127.0.0.1
 
 The configuration file for PowerDNS is usually located at `/etc/powerdns/pdns.conf`. Open it for editing:
 
-<div id="bkmrk-sudo-nano-%2Fetc%2Fpower"><div>`sudo nano /etc/powerdns/pdns.conf`</div></div>### 2 – Enable the API
+`sudo nano /etc/powerdns/pdns.conf`
+
+### 2 – Enable the API
 
 Find and modify the following lines, or add them if they are not present:
 
-<div id="bkmrk-api%3Dyeswebserver%3Dyes">```
-api=yes<br></br>webserver=yes<br></br>webserver-address=0.0.0.0 <br></br>webserver-port=8081
+```
+api=yes
+webserver=yes
+webserver-address=0.0.0.0 
+webserver-port=8081
 ```
 
-</div>- `api=yes`: Enables the API.
+- `api=yes`: Enables the API.
 - `webserver=yes`: Enables the web server for accessing the API.
 - `webserver-address=0.0.0.0`: Configures the server to listen on all IP addresses. If you want to restrict access to a specific IP, specify that IP address here.
 - `webserver-port=8081`: Specifies the port on which the API web server will be available (default is 8081).
@@ -280,26 +285,26 @@ api=yes<br></br>webserver=yes<br></br>webserver-address=0.0.0.0 <br></br>webserv
 
 To allow access to the API from another server, set up authentication by adding the following line in `pdns.conf`:
 
-<div id="bkmrk-api-key%3Dyour_api_key">```ini
-`api-key=your_api_key_here`
+```
+api-key=your_api_key_here
 ```
 
-</div>- `api-key=your_api_key_here`: Set the API key that will be used to authenticate requests to the API. Replace `your_api_key_here` with a strong, secure key.
+- `api-key=your_api_key_here`: Set the API key that will be used to authenticate requests to the API. Replace `your_api_key_here` with a strong, secure key.
 
 ### 4 – Restart PowerDNS
 
 After making these changes, restart PowerDNS to apply them:
 
-<div id="bkmrk-sudo-systemctl-resta-0">```bash
-`sudo systemctl restart pdns`
+```
+sudo systemctl restart pdns
 ```
 
-</div>### 5 – Test the API
+### 5 – Test the API
 
 From another server, test the API by making a request using the API key, for example:
 
-<div id="bkmrk-curl--x-get--h-%27x-ap">```bash
-`curl -X GET -H 'X-API-Key: your_api_key_here' http://ip_address_of_pdns_server:8081/api/v1/servers`
+```
+curl -X GET -H 'X-API-Key: your_api_key_here' http://ip_address_of_pdns_server:8081/api/v1/servers
 ```
 
-</div>Replace `your_api_key_here` with your API key and `ip_address_of_pdns_server` with the IP address of the server where PowerDNS is installed.
+Replace `your_api_key_here` with your API key and `ip_address_of_pdns_server` with the IP address of the server where PowerDNS is installed.
