--- a/doc/01. description.md
+++ b/doc/01. description.md
@@ -17,9 +17,9 @@ Module features:
 
 - - - - - -
 
-<p class="callout warning">WHMCS minimal version: 8 +</p>
+>WHMCS minimal version: 8 +
 
-<p class="callout warning">PowerDNS minimal version: 4.9</p>
+>PowerDNS minimal version: 4.9
 
 [![image-1725213835209.png](https://doc.puq.info/uploads/images/gallery/2024-09/scaled-1680-/image-1725213835209.png)](https://doc.puq.info/uploads/images/gallery/2024-09/image-1725213835209.png)
 
