--- a/doc/02. changelog.md
+++ b/doc/02. changelog.md
@@ -4,8 +4,6 @@
 
 #####  [Order now](https://puqcloud.com/index.php?rp=/store/whmcs-module-powerdns) | [Download](https://download.puqcloud.com/WHMCS/servers/PUQ_WHMCS-PowerDNS/) | [FAQ](https://faq.puqcloud.com/)
 
-- - - - - -
-
-##### v1.0 Released 01-09-2024
+### v1.0 Released 01-09-2024
 
 First version
