--- a/doc/03. Installation and configuration guide/01. whmcs-setup-install-update.md
+++ b/doc/03. Installation and configuration guide/01. whmcs-setup-install-update.md
@@ -4,11 +4,11 @@
 
 #####  [Order now](https://puqcloud.com/index.php?rp=/store/whmcs-module-powerdns) | [Download](https://download.puqcloud.com/WHMCS/servers/PUQ_WHMCS-PowerDNS/) | [FAQ](https://faq.puqcloud.com/)
 
-<p class="callout info">To install and update a module, you must perform one and the same action.</p>
+>To install and update a module, you must perform one and the same action.
 
-#####  
+  
 
-##### 1. Download the latest version of the module.
+### 1. Download the latest version of the module.
 
 PHP 8.1
 
@@ -22,12 +22,12 @@ PHP 7.4
 wget http://download.puqcloud.com/WHMCS/servers/PUQ_WHMCS-PowerDNS/php74/PUQ_WHMCS-PowerDNS-latest.zip
 ```
 
-<p class="callout info">All versions are available via link: [https://download.puqcloud.com/WHMCS/servers/PUQ\_WHMCS-PowerDNS/](https://download.puqcloud.com/WHMCS/servers/PUQ_WHMCS-PowerDNS/)</p>
+>All versions are available via link: [https://download.puqcloud.com/WHMCS/servers/PUQ\_WHMCS-PowerDNS/](https://download.puqcloud.com/WHMCS/servers/PUQ_WHMCS-PowerDNS/)
 
-##### 2. Unzip the archive with the module.
+### 2. Unzip the archive with the module.
 
 ```Powershell
 unzip PUQ_WHMCS-PowerDNS-latest.zip
 ```
 
-##### 3. Copy and Replace "puqPowerDNS" to "WHMCS\_WEB\_DIR/modules/servers/"
+### 3. Copy and Replace "puqPowerDNS" to "WHMCS\_WEB\_DIR/modules/servers/"
