--- a/doc/03. Installation and configuration guide/03. add-server-powerdns-server.md
+++ b/doc/03. Installation and configuration guide/03. add-server-powerdns-server.md
@@ -4,7 +4,7 @@
 
 #####  [Order now](https://puqcloud.com/index.php?rp=/store/whmcs-module-powerdns) | [Download](https://download.puqcloud.com/WHMCS/servers/PUQ_WHMCS-PowerDNS/) | [FAQ](https://faq.puqcloud.com/)
 
-##### Add a new server to the system WHMCS.
+### Add a new server to the system WHMCS.
 
 ```
 System Settings->Servers->Add New Server
