--- a/doc/03. Installation and configuration guide/04. product-configuration.md
+++ b/doc/03. Installation and configuration guide/04. product-configuration.md
@@ -4,7 +4,7 @@
 
 #####  [Order now](https://puqcloud.com/index.php?rp=/store/whmcs-module-powerdns) | [Download](https://download.puqcloud.com/WHMCS/servers/PUQ_WHMCS-PowerDNS/) | [FAQ](https://faq.puqcloud.com/)
 
-##### Add new product to WHMCS
+### Add new product to WHMCS
 
 ```
 System Settings->Products/Services->Create a New Product
