--- a/doc/04. Client Area/03. managing-dns-records.md
+++ b/doc/04. Client Area/03. managing-dns-records.md
@@ -12,6 +12,6 @@ To manage records, you need to click the "**Records**" button on the selected zo
 
 [![image-1725214930725.png](https://doc.puq.info/uploads/images/gallery/2024-09/scaled-1680-/image-1725214930725.png)](https://doc.puq.info/uploads/images/gallery/2024-09/image-1725214930725.png)
 
-#### Edit records
+### Edit records
 
 [![image-1725214980607.png](https://doc.puq.info/uploads/images/gallery/2024-09/scaled-1680-/image-1725214980607.png)](https://doc.puq.info/uploads/images/gallery/2024-09/image-1725214980607.png)
