--- a/doc/05. Admin Area/01. product-information.md
+++ b/doc/05. Admin Area/01. product-information.md
@@ -4,6 +4,6 @@
 
 #####  [Order now](https://puqcloud.com/index.php?rp=/store/whmcs-module-powerdns) | [Download](https://download.puqcloud.com/WHMCS/servers/PUQ_WHMCS-PowerDNS/) | [FAQ](https://faq.puqcloud.com/)
 
-##### Here is the data presented for the service admin in WHMCS
+### Here is the data presented for the service admin in WHMCS
 
 [![image-1725214321347.png](https://doc.puq.info/uploads/images/gallery/2024-09/scaled-1680-/image-1725214321347.png)](https://doc.puq.info/uploads/images/gallery/2024-09/image-1725214321347.png)
