--- a/doc/02. changelog.md
+++ b/doc/02. changelog.md
@@ -4,6 +4,20 @@
 
 #####  [Order now](https://puqcloud.com/index.php?rp=/store/whmcs-module-powerdns) | [Download](https://download.puqcloud.com/WHMCS/servers/PUQ_WHMCS-PowerDNS/) | [FAQ](https://faq.puqcloud.com/)
 
+### v2.0 Released 23-09-2024
+
+> Module is coded ionCube v13
+
+Supported php version:
+- php 7.4 WHMCS 8.11.0 -
+- php 8.1 WHMCS 8.11.0 +
+- php 8.2 WHMCS 8.11.0 +
+
+Changelog: 
+1. Translations added/updated (**Arabic, Azerbaijani, Catalan, Chinese, Croatian, Czech, Danish, Dutch, English, Estonian, Farsi, French, German, Hebrew, Hungarian, Italian, Macedonian, Norwegian, Polish,  Romanian, Russian, Spanish, Swedish, Turkish, Ukrainian**)
+
+- - - - - -
+
 ### v1.0 Released 01-09-2024
 
 First version
