--- a/doc/03. Installation and configuration guide/01. whmcs-setup-install-update.md
+++ b/doc/03. Installation and configuration guide/01. whmcs-setup-install-update.md
@@ -4,16 +4,27 @@
 
 #####  [Order now](https://puqcloud.com/index.php?rp=/store/whmcs-module-powerdns) | [Download](https://download.puqcloud.com/WHMCS/servers/PUQ_WHMCS-PowerDNS/) | [FAQ](https://faq.puqcloud.com/)
 
+> Module is coded ionCube v13
+
+Supported php version:
+- php 7.4 WHMCS 8.11.0 -
+- php 8.1 WHMCS 8.11.0 +
+- php 8.2 WHMCS 8.11.0 +
+
 >To install and update a module, you must perform one and the same action.
 
-  
-
 ### 1. Download the latest version of the module.
+
+PHP 8.2
+
+```Powershell
+wget http://download.puqcloud.com/WHMCS/servers/PUQ_WHMCS-PowerDNS/php82/PUQ_WHMCS-PowerDNS-latest.zip
+```
 
 PHP 8.1
 
 ```Powershell
-wget http://download.puqcloud.com/WHMCS/servers/PUQ_WHMCS-PowerDNS/PUQ_WHMCS-PowerDNS-latest.zip
+wget http://download.puqcloud.com/WHMCS/servers/PUQ_WHMCS-PowerDNS/php81/PUQ_WHMCS-PowerDNS-latest.zip
 ```
 
 PHP 7.4
