--- a/doc/02. changelog.md
+++ b/doc/02. changelog.md
@@ -4,6 +4,20 @@
 
 #####  [Order now](https://puqcloud.com/index.php?rp=/store/whmcs-module-powerdns) | [Download](https://download.puqcloud.com/WHMCS/servers/PUQ_WHMCS-PowerDNS/) | [FAQ](https://faq.puqcloud.com/)
 
+### v2.2 Released 07-02-2025
+
+1. Add automatic creation of zones if a domain was entered for services
+2. Fix conflict of technical fields with the name "content" in some cases interfere with deleting and editing TXT, SRV records
+
+- - - - - -
+
+### v2.1 Released 16-11-2024
+
+1. Add zone templates configuration to product configuration (https://doc.puq.info/books/powerdns-whmcs-module/page/product-configuration)
+2. Some bug fix
+
+- - - - - -
+
 ### v2.0 Released 23-09-2024
 
 > Module is coded ionCube v13
