--- a/doc/02. changelog.md
+++ b/doc/02. changelog.md
@@ -4,6 +4,12 @@
 
 #####  [Order now](https://puqcloud.com/index.php?rp=/store/whmcs-module-powerdns) | [Download](https://download.puqcloud.com/WHMCS/servers/PUQ_WHMCS-PowerDNS/) | [FAQ](https://faq.puqcloud.com/)
 
+### v2.3 Released 02-04-2025
+
+1. Added critical security fixes
+
+- - - - - -
+
 ### v2.2 Released 07-02-2025
 
 1. Add automatic creation of zones if a domain was entered for services
